<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_id_input"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/signup_id_input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/signup_id_isDup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/signup_id_dup"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/signup_pw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_pw" />

        <EditText
            android:id="@+id/signup_pw_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/signup_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_name" />

        <EditText
            android:id="@+id/signup_name_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/signup_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_phone" />

        <EditText
            android:id="@+id/signup_phone_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/signup_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_address" />

        <EditText
            android:id="@+id/signup_address_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/signup_agree_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_agree_text" />

        <TextView
            android:id="@+id/signup_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/signup_agree_content"
            android:textSize="12sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/signup_agree_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_agree_decline"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/signup_agree_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_agree_accept"
                android:textSize="14sp" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/signup_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_commit"
        android:layout_marginTop="10dp" />

</LinearLayout>